--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hridoy portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half">
+            <h1>Welcome to</h1>
+            <h1><span class="orange">Hridoy Chowdhury</span>house</h>
+                <h3>Web devloper</h3>
+                <p>e goal of the Full Stack Web Developer Nanodegree program is to equip learners with the unique skills
+                    they need to build database-backed APIs and web applications. A graduate of this program will be
+                    able to
+                    design and build databases for software applications, create and deploy database-backed web APIs,
+                    and
+                    secure and manage user authentication and access control for an application backend.
+                </p>
+                <a class="link-button" target="_blank" href="https://www.linkedin.com/in/hridoy-chy-878516204/">hIRE ME
+                </a>
+        </div>
+        <div class="half"><img src="images/hridoy.jpg" alt="profile-pic"></div>
+    </section>
+
+
+
 </body>
+
 </html>
