--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half">
             <h1>Welcome to</h1>
             <h1><span class="orange">Hridoy Chowdhury</span>house</h>
@@ -30,9 +30,59 @@
         </div>
         <div class="half"><img src="images/hridoy.jpg" alt="profile-pic"></div>
     </section>
+    <section class="big flexible-container">
+        <div class="half">
+            <img src="images/18.jpg" alt="picture">
+        </div>
+        <div class="half">
+            <h1>DREAM BIg</h1>
+            <h3>become a web devloper</h3>
+            <p>Web developers are at the forefront of the Internet age. The websites we browse, the gifts we order and
+                the news we peruse online are all made possible by the web developers who design, build and implement
+                Internet websites. They are heavily involved in website creation, from helping design aesthetic
+                properties such as layout and color, to technical considerations such as how to design a website to
+                handle a given amount of Internet traffic.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/hridoy-chy-878516204/">DOWNLOAD
+                RESUME
+            </a>
 
 
 
+        </div>
+
+    </section>
+
+    <section class="down">
+        <h1>Experiance</h1>
+
+        <Div class="flexible-container">
+            <div id="web-dev" class="Experiance">
+                <h2><span class="orange">Full stack devloper</span></h2>
+                <h3>2020-present| pro level devloper</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution. </p>
+
+            </div>
+            <div id="web-dev" class="Experiance">
+                <h2> <span class="orange">Baby devloper</h2></span>
+                <h3>2020-2021 | Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+
+
+            </div>
+        </Div>
+
+    </section>
+
+
+    <footer>
+        <p>© Hridoy Chowdhury 2021, a Programming Hero learner.
+        <p>
+    </footer>
 </body>
 
 </html>
